# dsdunpack

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  dsdiff.c  dsdio.c  dsdio.h  dsf.c  main.c
lib/libdstdec/: dst_decoder.c  dst_decoder.h
